test/fixtures/configs/pages/get/one/fail/params/page.js
exports.notFound = {
  url: '/users/1/projects/1/pages/9001',
  method: 'get'
};

exports.notNumber = {
  url: '/users/1/projects/1/pages/applesauce',
  method: 'get'
};

exports.notInteger = {
  url: '/users/1/projects/1/pages/1.5',
  method: 'get'
};
